fixed spotbugs warnings.